Add: try darwin/linux cross compilation.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,4 +12,6 @@ jobs:
     steps:
       # Commands are run in a Windows virtual machine environment
       - checkout
-      - run: go build src/main.go
+      - run: go build src/main.go -o hello-world-windows
+      - run: $env:GOOS="darwin"  $env:GOARCH="amd64" go build src/main.go -o helloworld-mac
+      - run: $env:GOOS="linux"  $env:GOARCH="amd64" go build src/main.go -o helloworld-linux
