--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,14 @@ version: 2.1 # Use version 2.1 to enable orb usage.
 orbs:
   win: circleci/windows@2.2.0 # The Windows orb give you everything you need to start using the Windows executor.
 
+## could these be commands?
+references:
+  workspace_root: &workspace_root
+    /tmp/workspace
+  attach_workspace: &attach_workspace
+    attach_workspace:
+      at: *workspace_root
+
 jobs:
   build: # name of your job
     executor:
@@ -12,6 +20,7 @@ jobs:
     steps:
       # Commands are run in a Windows virtual machine environment
       - checkout
+      - *attach_workspace
       - run: go build -o hello-world-windows src/main.go
       - run:
           name: Compile for Mac
@@ -25,3 +34,33 @@ jobs:
           environment:
             GOOS: linux
             GOARCH: amd64
+      - run:
+          name: "Persist Artifacts" # Move our compiled binaries into a workspace.
+          command: |
+            set -exu
+            mkdir -p /tmp/workspace/bin/
+            mv hello-world-mac  /tmp/workspace/bin
+            mv hello-world-linux  /tmp/workspace/bin
+            mv hello-world-windows  /tmp/workspace/bin
+      - persist_to_workspace: # store the built files into the workspace for other jobs.
+          root: *workspace_root
+          paths:
+            - bin
+
+
+  mac:
+    macos:  # indicate that we are using the macOS executor
+      xcode: 11.3.0 # indicate our selected version of Xcode
+    steps: # a series of commands to run
+      - checkout  # pull down code from your version control system.
+      - store_artifacts: # store this build output. Read more: https://circleci.com/docs/2.0/artifacts/
+          path: app.zip
+          destination: app
+      - run:
+          name: Restore workspace on mac.
+          command: |
+            set -exu
+            mkdir -p /tmp/workspace/bin
+            ls -la
+
+workflows:
