Fix: binary names.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,13 +25,13 @@ jobs:
       - run: go build -o hello-world-windows src/main.go
       - run:
           name: Compile for Mac
-          command: go build -o helloworld-mac src/main.go
+          command: go build -o hello-world-mac src/main.go
           environment:
             GOOS: darwin
             GOARCH: amd64
       - run:
           name: Compile for Linux
-          command: go build -o helloworld-linux src/main.go
+          command: go build -o hello-world-linux src/main.go
           environment:
             GOOS: linux
             GOARCH: amd64
