--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,20 +43,20 @@ jobs:
       - attach_workspace:
           at: /tmp
       - run:
-          name: Look at workspace
+          name: View attached workspace results
           command: |
-            echo "workspace results are ------------------------"
             cd /tmp/bin
             ls -la
       - run:
           name: Test OS X binary.
           command: |
             if ./hello-world-mac | grep -q 'Hello world from: darwin'; then
-              echo "Mac binary successfully run"\
+              echo "Mac binary successfully run"
               exit
             else
               echo "Mac binary not successfully run"
               exit 1
+            fi
 
 workflows:
   version: 2
